fix(Field): break long label when `labelAlign="top"`

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -45,6 +45,7 @@
       width: 100%;
       text-align: left;
       margin-bottom: var(--van-padding-base);
+      word-break: break-word;
     }
 
     &--required {
